# uwais

./: CHANGELOG.md  Cargo.toml  README.md  install.sh  release.sh  uwais.sh
.github/workflows/: release.yml
src/: command.rs  exec.rs  git.rs  http.rs  lang.rs  main.rs  os.rs  print.rs  read.rs  source.rs  string.rs  structure.rs  sys.rs  time.rs
structure/v4/go/: .gitignore.txt  Dockerfile.txt  docker-compose.yml.txt  main.go.txt
structure/v4/go/common/: __template.go.txt  response.go.txt
structure/v4/go/domain/: __template.go.txt  todo.go.txt
structure/v4/go/infra/: build.sh.txt  docker-down.sh.txt  start.sh.txt
structure/v4/nodejs/: .gitignore.txt  Dockerfile.txt  Makefile.txt  README.md.txt  main.js.txt  package.json.txt
structure/v4/nodejs/common/: __template.js.txt  response.js.txt
structure/v4/nodejs/domain/: __template.js.txt  todo.js.txt
structure/v4/nodejs/infra/: build.sh.txt  docker-up.sh.txt  start.sh.txt
structure/v4/python/: .dockerignore.txt  .gitignore.txt  Dockerfile.txt  README.md.txt  main.py.txt  requirements.txt.txt
structure/v4/python/common/: __template.py.txt  response.py.txt
structure/v4/python/domain/: __template.py.txt  todo.py.txt
structure/v4/python/infra/: build.sh.txt  docker-down.sh.txt  docker-stop.sh.txt  docker-up.sh.txt  start.sh.txt
structure/v4/rust/: .dockerignore.txt  .gitignore.txt  Dockerfile.txt  README.md.txt
structure/v4/rust/infra/: build.sh.txt  start.sh.txt
structure/v4/typescript/: .dockerignore.txt  .gitignore.txt  main.ts.txt  package.json.txt  tsconfig.json.txt
(+50 files in other folders)
