[package]
name = "uwais"
version = "2.0.4"
edition = "2021"

[dependencies]
colored = "3.0.0"
include_dir = "0.7.4"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1.0.226"
serde_json = "1.0.140"
toml = "0.9.4"
zip = "5.1.1"
once_cell = "1.21.3"
